[package]
name = "rust-OS"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
futures-util = { version = "0.3.28", default-features = false, features = ["alloc"] }
crossbeam-queue = { version = "0.3.8", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.4.0", default-features = false }
#bootimage = "0.10.3"
linked_list_allocator = "0.10.5"
volatile = "0.4.6"
spin = "0.9.8"
x86_64 = "0.14.10"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
ps2 = "0.2.0"
bitflags = "2.3.1"
# testing
uart_16550 = "0.2.18"

# [package.metadata.bootimage]
# test-args = [
#     "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
#     "-display", "none", "-m", "3096M", "-smp", "4", "-cpu", "host", "-rtc", "base=localtime"
# ]
# test-success-exit-code = 33
# test-timeout = 180
# run-args = []

# [[test]]
# name = "shouldPanic"
# harness = false

# [[test]]
# name = "stackOverflow"
# harness = false

#[profile.dev]
#panic = "abort"

#[profile.release]
#panic = "abort"

#[workspace]
#members = [
#    "boot",
#]
