[package]
name = "rust-OS"
version = "0.1.0"
edition = "2024"
default-run = "rust-OS"

[workspace]
members = ["rOSkernel", "cpuid", "linked-list-allocator"]

[dependencies]
ovmf-prebuilt = "0.2.2"
fatfs = "0.3.6"
gpt = "4.1.0"

[build-dependencies]
rOSkernel = { path = "rOSkernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.10"
