[package]
name = "rOSkernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rOSkernel"
test = false
bench = false

[dependencies]
bootloader_api =  "0.11.9"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
futures-util = { version = "0.3.28", default-features = false, features = [
    "alloc",
] }
crossbeam-queue = { version = "0.3.8", default-features = false, features = [
    "alloc",
] }
conquer-once = { version = "0.4.0", default-features = false }
bootloader-x86_64-common = "0.11.10"
log = { version = "0.4.17", default-features = false }
noto-sans-mono-bitmap = "0.3.1"
linked_list_allocator = "0.10.5"
spin = "0.9.8"
x86_64 = "0.15.2"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"
ps2 = "0.2.0"
uart_16550 = "0.3.2"

# [package.metadata.bootimage]
# test-args = [
#     "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
#     "-display", "none", "-m", "3096M", "-smp", "4", "-cpu", "host", "-rtc", "base=localtime"
# ]
# test-success-exit-code = 33
# test-timeout = 180
# run-args = []

# [[test]]
# name = "shouldPanic"
# harness = false

# [[test]]
# name = "stackOverflow"
# harness = false

#[profile.dev]
#panic = "abort"

#[profile.release]
#panic = "abort"

#[workspace]
#members = [
#    "boot",
#]
