[package]
name = "rOSkernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rOSkernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.9"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
futures-util = { version = "0.3.28", default-features = false, features = [
    "alloc",
] }
crossbeam-queue = { version = "0.3.8", default-features = false, features = [
    "alloc",
] }
once_cell = { version = "1.21.3", default-features = false, features = ["alloc", "critical-section"] }
critical-section = { version = "1.2.0", features = ["restore-state-bool"] }
bootloader-x86_64-common = "0.11.10"
log = { version = "0.4.27", default-features = false }
noto-sans-mono-bitmap = "0.3.1"
x86_64 = { version = "0.15.2", features = ["default", "nightly"] }
acpi = { version = "5.2.0", default-features = false, features = ["alloc", "allocator_api"] }
aml = "0.16.4"
pc-keyboard = "0.8.0"
ps2 = "0.2.0"
uart_16550 = "0.3.2"
spin = "0.10.0"
bitflags = "2.10.0"
hashbrown = "0.16.1"
cpuid = { path = "../cpuid" }

# [package.metadata.bootimage]
# test-args = [
#     "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
#     "-display", "none", "-m", "3096M", "-smp", "4", "-cpu", "host", "-rtc", "base=localtime"
# ]
# test-success-exit-code = 33
# test-timeout = 180
# run-args = []

# [[test]]
# name = "shouldPanic"
# harness = false

# [[test]]
# name = "stackOverflow"
# harness = false

#[profile.dev]
#panic = "abort"

#[profile.release]
#panic = "abort"

#[workspace]
#members = [
#    "boot",
#]
